--- a/Sprint123/WebUI/packages.config
+++ b/Sprint123/WebUI/packages.config
@@ -3,6 +3,7 @@
   <package id="bootstrap" version="4.0.0" targetFramework="net451" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net451" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net451" />
+  <package id="iTextSharp" version="5.5.13" targetFramework="net451" />
   <package id="jQuery" version="3.0.0" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net451" />
