--- a/Sprint123/UnitTests/UnitTests.csproj
+++ b/Sprint123/UnitTests/UnitTests.csproj
@@ -107,6 +107,7 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReservationID.cs" />
+    <Compile Include="UnitTest2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
