--- a/Sprint123/Domain/Domain.csproj
+++ b/Sprint123/Domain/Domain.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IMovieOverviewRepository.cs" />
+    <Compile Include="Abstract\IRoomRepository.cs" />
     <Compile Include="Abstract\IShowRepository.cs" />
     <Compile Include="Abstract\IShowSeatRepository.cs" />
     <Compile Include="Abstract\ITempTicketRepository.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="Concrete\CinemaInitializer.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Concrete\MovieOverviewRepository.cs" />
+    <Compile Include="Concrete\RoomRepository.cs" />
     <Compile Include="Concrete\ShowRepository.cs" />
     <Compile Include="Concrete\ShowSeatRepository.cs" />
     <Compile Include="Concrete\TempTicketRepository.cs" />
