--- a/Sprint123/Domain/App.config
+++ b/Sprint123/Domain/App.config
@@ -4,7 +4,12 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <entityFramework>
+<entityFramework>
+    <contexts>
+      <context type="Domain.Concrete.EFDbContext, Domain">
+        <databaseInitializer type="Domain.Concrete.CinemaInitializer, Domain" />
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
